<resources>
    <string name="app_name">PolyPlan</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="tasks">Tasks</string>
    <string name="documents">Documents</string>
    <string name="expenses">Expenses</string>
    <string name="timeyable">Timetable</string>
    <string name="shoppinglist">Shopping list</string>
    <string name="close">CLOSE</string>
    <string name="join">JOIN</string>
    <string name="create">CREATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="signup">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="no_account">Don`t have an account? Sign Up</string>
    <string name="create_family">CREATE FAMILY</string>
    <string name="join_family">JOIN FAMILY</string>
    <string name="enter_document_title">Enter document title</string>
    <string name="upload">UPLOAD</string>
    <string name="choose_date">Choose date</string>
    <string name="add">ADD</string>
    <string name="enter_category">Enter category</string>
    <string name="enter_amount">Enter amount</string>
    <string name="sign_money"> $</string>
    <string name="income">Income</string>
    <string name="add_expense">Add expense</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_task_responsible">Enter task responsible</string>
    <string name="enter_task_text">Enter task text</string>
    <string name="change">CHANGE</string>
    <string name="enter_timetable">Enter timetable</string>
    <string name="enter_family_name">Enter family name</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="add_document">ADD DOCUMENT</string>
    <string name="enter_family_id">Enter family id</string>
    <string name="family">Family</string>
    <string name="family_id">family id</string>
    <string name="role">role</string>
    <string name="log_out">Log Out</string>
    <string name="mark_as_complete">Mark task as complete</string>
    <string name="add_task">Add task</string>
    <string name="add_timetable">Add timetable</string>
    <string name="change_timetable">Change timetable</string>
</resources>