<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/day_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_timetable"
        android:layout_margin="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="15dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/close"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

</LinearLayout>